--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,8 +1,141 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Rubik&display=swap');
+
+#content{
+  margin: 0 auto;
+}
+
+content {
+  max-width: 1600px;
+}
+
+header {
+  background-color: rgba(20,30,13, 0.7);
+  display: grid;
+  grid-template-columns: 150px auto;
+}
+
 body {
     background-color: lightblue;
+    font-family: "Nunito", "IBM Plex Sans","Rubik";
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+
   }
   
-  h1 {
+h1 {
     color: navy;
     margin-left: 20px;
-  }
+}
+
+h2{
+  margin: 0;
+}
+
+nav a{
+  background-color: #595959;
+  text-decoration: none;
+  color: #fcfbfb;
+  text-align: center;
+  padding: 35px;
+}
+
+footer{
+  padding:25px, 50px;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+footer p{
+  font-size: 1.2em;
+}
+
+footer p a:hover{
+  text-decoration: underline;
+}
+
+footer .social img{
+  padding-top: 15px;
+}
+
+main section{
+  text-align: center;
+}
+
+content{
+  text-align: center;
+
+}
+
+#hero-msg h1, #hero-msg h4{
+  text-align: center;
+}
+
+.button-box{
+  text-align: center;
+}
+
+.home-title {
+    font-family: "Nunito", "IBM Plex Sans", "Rubik";
+    font-size: 2em;
+}
+
+.msg{
+  background-color: #6f7364;
+  line-height: 1.5em;
+  padding:35px;
+}
+
+.msg p {
+  font-size: 0.8em;
+  padding-bottom: 15px;
+}
+
+.book, .join{
+  background-color: #d9c2a3;
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  padding:15px, 30px;
+  margin: 50px;
+  border-radius: 5px;
+
+}
+
+.card-img{
+  border: 10px solid black;
+}
+
+main section img{
+  box-sizing: border-box;
+}
+
+.icon{
+  width: 80px;
+  padding-top: 10px;
+}
+
+.home-title{
+  margin-top: 10px;
+}
+
+.rivers-card, .camping-card, .rapids-card{
+  margin: 200px 0;
+}
+
+footer{
+  margin-top: 200px;
+}
+
+#background {
+  height: 725px;
+}
+
+#logo_link{
+  padding-top: 5px;
+}
+
