--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -39,11 +39,18 @@ nav a{
   text-decoration: none;
   color: #fcfbfb;
   text-align: center;
-  padding: 35px;
+  padding: 0.1px;
+  display: flex;
+  justify-content: space-around;
 }
 
 footer{
   padding:25px, 50px;
+  background-color: #fcfbfb;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 footer a {
@@ -71,8 +78,26 @@ content{
 
 }
 
+#hero{
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px;
+}
+
+#hero-msg{
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
+}
 #hero-msg h1, #hero-msg h4{
   text-align: center;
+  color: white;
+}
+
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
 }
 
 .button-box{
@@ -88,8 +113,16 @@ content{
   background-color: #6f7364;
   line-height: 1.5em;
   padding:35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
+  box-shadow: 5px 5px 10px #6f7364;
 }
 
+.mountains{
+  grid-column: 2/7;
+  grid-row: 5/8;
+  box-shadow: 5px 5px 10px #6f7364;
+}
 .msg p {
   font-size: 0.8em;
   padding-bottom: 15px;
@@ -108,7 +141,21 @@ content{
 
 .card-img{
   border: 10px solid black;
+  transition: transform .5s;
+  box-shadow: 5px 5px 10px #6f7364;
 }
+
+.card-img:hover{
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+
+.card-img, .mountains{
+  width: 100%;
+}
+
+
+
 
 main section img{
   box-sizing: border-box;
@@ -137,5 +184,7 @@ footer{
 
 #logo_link{
   padding-top: 5px;
+  justify-content: center;
+  align-self: center;
 }
 
